Remplissage accueil.html

--- a/views/accueil.html
+++ b/views/accueil.html
@@ -1,1 +1,9 @@
-<h1>Accueil</h1>
+<section>
+	<h2>Es-tu en état de conduire ?</h2>
+	<p>Tu sors d'une soirée un peu arrosée, c'est le moment de prendre la voiture, mais tu n'es pas sûr d'être en état ?</p>
+	<p>Ne t'inquiète pas ! Cette application va t'aider à déterminer si tu as les idées claires et un cerveaux suffisament réactif à l'aide d'une série de questions.</p>
+	<p><b>Attention : cette application s'inscrit dans le cadre du pur divertissement et ne constitue en aucun cas une autorisation officielle de prendre la route, et ce quelque soit le résultat.<br>Le conducteur reste le seul responsable en cas d'accident lié à la consommation abusive d'alcool.</b></p>
+	<label>
+	<input type="checkbox" ng-model='confirm'> J'ai bien compris que ce test n'est pas officiel et que je suis le seul garant de ma sécurité.</label><br>
+	<button type='button' href='/#/questions' ng-show='confirm'>OK ! C'est parti !</button>
+</section>
