--- a/views/questions.html
+++ b/views/questions.html
@@ -1,1 +1,5 @@
 <h1>Questions</h1>
+<h2>{{ask.demand}}</h2>
+<li ng-repeat='reponse in ask.answers | orderBy : ask.random'>
+	{{reponse.reponse}}
+</li>
