Intervale implanté et fonction touillette

--- a/views/questions.html
+++ b/views/questions.html
@@ -1,5 +1,5 @@
 <h1>Questions</h1>
 <h2>{{ask.demand}}</h2>
-<li ng-repeat='reponse in ask.answers | orderBy : ask.random'>
+<li ng-repeat='reponse in ask.answers'>
 	{{reponse.reponse}}
 </li>
