--- a/views/questions.html
+++ b/views/questions.html
@@ -1,5 +1,7 @@
 <h1>Questions</h1>
+<div class='score'>Score = {{ask.score}}</div>
+<span class='progressBar'></span>
 <h2>{{ask.demand}}</h2>
-<li ng-repeat='reponse in ask.answers'>
-	{{reponse.reponse}}
+<li class='reponses' ng-repeat='reponse in ask.answers'>
+	<a ng-click='ask.check(reponse.vrai)'>{{reponse.reponse}}</a>
 </li>
