--- a/views/accueil.html
+++ b/views/accueil.html
@@ -1,11 +1,11 @@
-<section>
+<section class="accueil">
 	<h2>Es-tu en état de conduire ?</h2>
 	<p>Tu sors d'une soirée un peu arrosée, c'est le moment de prendre la voiture, mais tu n'es pas sûr d'être en état ?</p>
 	<p>Ne t'inquiète pas ! Cette application va t'aider à déterminer si tu as les idées claires et un cerveaux suffisament réactif à l'aide d'une série de questions.</p>
-	<p><b>Attention : cette application s'inscrit dans le cadre du pur divertissement et ne constitue en aucun cas une autorisation officielle de prendre la route, et ce quelque soit le résultat.<br>Le conducteur reste le seul responsable en cas d'accident lié à la consommation abusive d'alcool.</b></p>
+	<div class="warning"><p><b>Attention : cette application s'inscrit dans le cadre du pur divertissement et ne constitue en aucun cas une autorisation officielle de prendre la route, et ce quelque soit le résultat.<br>Le conducteur reste le seul responsable en cas d'accident lié à la consommation abusive d'alcool.</b></p></div>
 	<label>
 	<input type="checkbox" ng-model='confirm'> J'ai bien compris que ce test n'est pas officiel et que je suis le seul garant de ma sécurité.</label><br>
 	<a href='/#/questions'>
-		<input type='button' ng-disabled='!confirm' value="OK ! C'est parti !">
+		<input class="okgo" type='button' ng-disabled='!confirm' value="OK ! C'est parti !">
 	</a>
 </section>
