--- a/views/accueil.html
+++ b/views/accueil.html
@@ -1,3 +1,4 @@
+<!-- Texte d'accueil/première page -->
 <section class="accueil">
 	<h2>Es-tu en état de conduire ?</h2>
 	<p>Tu sors d'une soirée un peu arrosée, c'est le moment de prendre la voiture, mais tu n'es pas sûr d'être en état ?</p>
